list of all the changes in the code.


* Changes in VICE 0.14.2
========================

** C64 changes
--------------

- A couple of VIC-II/6510 timing bugs have been fixed.

- The "sprite crunch" effect should now be emulated properly.

- Changes in $3FFF/$39FF in the middle of one raster line do not
  affect the whole line anymore.

- Color of forced DMA characters is now correct.

** PET changes
--------------

- Emulation of joysticks connected to the user port has been added.

** Unix changes
---------------

- The "change working directory" command displays the current working
  directory as default.

** Miscellaneous changes
------------------------

- Much improved 1541 emulation: most custom write routines should now
  work.


* Changes in VICE 0.14.1
========================

** C64 changes
--------------

- A nasty CIA-related bug has been fixed.


* Changes in VICE 0.14.0
========================

** 6502/6510 changes
--------------------

- Several mostly timing-related 6510 bugs have been fixed (thanks to
  Andreas Boose's test suites).

** C64 changes
--------------

- Better SID (audio chip) emulation.  Now filters are emulated and
  waveforms are more accurate.  (Many thanks go to Michael Schwendt,
  author of SIDplay, for helping out with this and for providing the
  filter code and the SID wave tables.)

- Some CIA bugs have been fixed (big thanks to Andreas Boose for
  reporting them).

- The IEC bus recalculation has been made slightly faster (but you
  will probably not notice this, also because the true 1541
  compatibility improvements have made the emulation a bit slower).

- Some VIC-II bugs have been fixed (more big thanks to Andreas for his
  invaluable test suite).

- Disk/tape images can be "autostarted" from the command-line (with
  the new `-autostart' option) or at runtime (i.e. you can attach the
  image and let the emulator run and execute the first program on it
  for you).  This also works with `P00' and raw CBM binary files.
